@startuml

class AppCompatActivity
AppCompatActivity <|-- StartupActivity
AppCompatActivity <|-- MainActivity

class StartupActivity {
    -selectedPower: int
    -selectedSound: int
    +dialogSoundConstructor()
    +dialogPowerConstructor()
}
StartupActivity .. MainActivity

class MainActivity {
    +popIndexList: LinkedList<Integer>
    +bufferSize: int
    +recording: short[][]
    -audioRecorder: AudioRecord
    -mediaPlayer: MediaPlayer
    +stopAll()
}
class RecorderTask
class ProcessorTask
MainActivity "1  " +-- RecorderTask
MainActivity "1    " +-- ProcessorTask
MainActivity "1" *-- StopCondition
MainActivity "1" *-- PeakFinder
MainActivity "1" *-- PeakFinderFactory

interface StopCondition {
    #popList: LinkedList<Integer>
    +conditionSatisfied()
    +getCurrentCondition()
}
class CountingCondition
class IntervalCondition
StopCondition <|-- CountingCondition
StopCondition <|-- IntervalCondition

interface PeakFinder {
    getPops()
    reset()
    factor
    popWidth
}
class PeakFinderFactory {
    getPeakFinder()
}
class ZamirBerendorf
class MovingAverage
PeakFinder <-- PeakFinderFactory: creates
PeakFinder <|-- ZamirBerendorf
PeakFinder <|-- MovingAverage

class AsyncTask

AsyncTask <|-- RecorderTask
AsyncTask <|-- ProcessorTask



@enduml